--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: "About"
-description: "Hey, this is BY."
+title: "About Me"
+description: "boundary"
 header-img: "img/post-bg-rwd.jpg"
 ---
 
@@ -15,43 +15,30 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>冰冻三尺 非一日之寒<br>
-    积土成山 非斯须之作</p></blockquote>
+    <blockquote><p>世之奇伟、瑰怪、非常之观，常在险远</blockquote>
 
-    <p>H我是<strong>jktian</strong>，一只保研狗，正在渡劫中</p>
+    <p><strong>jktian</strong>，一个自嗨的人, 正在渡劫中</p>
 
+    <strong>教育背景</strong>
+    <ul><li> DLUT, SE.　大三在读</li></ul>
+
+    <strong>兴趣点</strong>
     <ul>
-        <li><ul>教育背景
-            <li> DLUT, SE.　大三在读</li>
-        </ul>
-        </li>
-        <li><ul>兴趣点
-            <li>机器学习，数据挖掘，模型搭建与算法设计</li>
-            <li>重构，软件工程</li>
-            <li>web开发</li>
-        </ul>
-        </li>
-        <li><ul>技能树
-            <li>语言：python, cpp, js, lisp, sql</li>
-            <li>操作系统：linux</li>
-        </ul>
-        </li>
-<!--         <li><a href="http://huangxuan.me/">Hux</a></li>  -->
-        <!-- <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li> -->
+        <li>机器学习，数据挖掘，模型搭建与算法设计</li>
+        <li>重构，软件工程</li>
+        <li>web开发</li>
     </ul>
-
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/ixneo">👉GitHub·BY</a> 如果有什么问题，欢迎提出探讨~</p>
-
-    <p></p>
     
-    <h5>Talks</h5>
-
+    <strong>技能树</strong>
     <ul>
-        <li><a href="https://github.com">GitHub</a></li>
-        <li><a href="http://jekyll.com.cn/">jekyll</a></li>
+        <li>语言：python, cpp, js, lisp, sql</li>
+        <li>操作系统：linux</li>
+    </ul>
 <!--         <li><a href="http://huangxuan.me/">Hux</a></li>  -->
         <!-- <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li> -->
-    </ul>
+
+<!--         <li><a href="http://huangxuan.me/">Hux</a></li>  -->
+        <!-- <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li> -->
 </div>
 
 <!-- English Version -->
